fixed footer resizing issue style adjustment for the home version on mobile

--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -50,7 +50,7 @@
     }
     
     .top_content {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 1rem;
     }
     
